random cats button

--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gatos aleatorios</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <h1>Gatos aleatorios</h1>
-
+    <p>Prueba de concepto para consumir una API REST</p>
+    <div>
+      <button type="button" class="random-cat-button" onclick="siguienteGato">
+        Siguiente gato
+      </button>
+    </div>
     <img alt="Foto gato aleatorio" />
 
     <script src="./main.js"></script>
