asyn await fect, query parameters

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <h1>Gatos aleatorios</h1>
     <p>Prueba de concepto para consumir una API REST</p>
     <div>
-      <button type="button" class="random-cat-button" onclick="siguienteGato">
+      <img id="img1" width="250" alt="Foto gato" />
+      <img id="img2" width="250" alt="Foto gato" />
+      <img id="img3" width="250" alt="Foto gato" />
+      <button type="button" class="random-cat-button" onclick="reload()">
         Siguiente gato
       </button>
     </div>
-    <img alt="Foto gato aleatorio" />
 
     <script src="./main.js"></script>
   </body>
