--- a/index.html
+++ b/index.html
@@ -16,12 +16,16 @@
     <section id="randomMichis">
       <article>
         <img id="img1" width="250" alt="Foto gato" />
-        <button>Guardar michi en favoritos</button>
+        <button type="button" id="btn1" onclick="saveFavourite()">
+          Guardar michi en favoritos
+        </button>
       </article>
 
       <article>
         <img id="img2" width="250" alt="Foto gato" />
-        <button>Guardar michi en favoritos</button>
+        <button type="button" id="btn2" onclick="saveFavourite()">
+          Guardar michi en favoritos
+        </button>
       </article>
 
       <button
