--- a/index.html
+++ b/index.html
@@ -23,24 +23,16 @@
 
       <article>
         <img id="img2" width="250" alt="Foto gato" />
-        <button type="button" id="btn2" onclick="saveFavourite()">
-          Guardar michi en favoritos
-        </button>
+        <button type="button" id="btn2" onclick="saveFavouriteMichi()">Guardar michi en favoritos</button>
       </article>
 
-      <button
-        type="button"
-        class="random-cat-button"
-        onclick="loadRandomMichis()"
-      >
-        Siguientes gatos
-      </button>
+      <button type="button" class="random-cat-button" onclick="loadRandomMichi()">Siguientes gatos</button>
     </section>
 
-    <section id="favoritesMichis">
+    <section id="favouriteMichis">
       <h2>Michis favoritos</h2>
       <article>
-        <img id="img1" width="250" alt="Foto gato" />
+        <img id="img1" width="250" alt="Foto gato favorito" />
         <button>Quitar michi en favoritos</button>
       </article>
     </section>
