--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
       </article>
 
       <article>
-        <img id="img2" width="250" alt="Foto gato" />
+        <img id="img2" width="150" alt="Foto gato" />
         <button type="button" id="btn2" onclick="saveFavouriteMichi()">Guardar michi en favoritos</button>
       </article>
 
-      <button type="button" class="random-cat-button" onclick="loadRandomMichi()">Siguientes gatos</button>
+      <button type="button" class="random-cat-button" onclick="loadRandomMichis()">Siguientes gatos</button>
     </section>
 
     <section id="favouriteMichis">
