--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 
     <span id="error"></span>
 
+    <!-- Random michis -->
     <section id="randomMichis">
       <article>
-        <img id="img1" width="250" alt="Foto gato" />
+        <img id="img1" width="150" alt="Foto gato" />
         <button type="button" id="btn1" onclick="saveFavourite()">
           Guardar michi en favoritos
         </button>
@@ -29,6 +30,17 @@
       <button type="button" class="random-cat-button" onclick="loadRandomMichis()">Siguientes gatos</button>
     </section>
 
+    <!-- Formulario Subir michi-->
+    <section id="uploadingMichi">
+      <h2>Sube la foto de tu gato</h2>
+
+      <form id="uploadingForm">
+        <input id="file" type="file" name="file" />
+        <button type="button" onclick="uploadMichiPhoto()">Subir foto de gato</button>
+      </form>
+    </section>
+
+    <!-- Gatos Favoritos -->
     <section id="favouriteMichis">
       <h2>Michis favoritos</h2>
       <article>
@@ -36,6 +48,8 @@
         <button>Quitar michi en favoritos</button>
       </article>
     </section>
+
+
 
     <script src="./main.js"></script>
   </body>
